cese de asesoria, reasignación del tesista y notificaciones